--- a/projects/Covid-19/css/style.css
+++ b/projects/Covid-19/css/style.css
@@ -5,6 +5,7 @@
   margin: 0;
 }
 
+
 /* general body */
 body {
   display: flex;
@@ -15,6 +16,7 @@ body {
   background: url(https://unsplash.it/1800/800?image=893);
   background-size: cover;
   background-position: 50%;
+  overflow: hidden;
   font-family: "Cutive Mono", monospace;
 }
 
@@ -27,26 +29,94 @@ body:after {
   width: 100%;
   background: rgba(17, 17, 17, 0.9);
 }
-body >*{
+body >* {
   z-index: 5;
+  /* border: 1px solid white; */
 }
 .header {
-  border: 1px solid wheat;
   margin: 0px auto;
-	padding: 3%;
+	padding: 2%;
   color: #fff;
 }
 .title {
-  font-family: "Cutive Mono", monospace;
   font-size: 1em;
   font-weight: 400;
   letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
-#chart {
-  border: 1px solid wheat;
+.container {
+  max-width: 700px;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
   align-self: center;
-  max-width: 1000px;
-  z-index: 5;
+}
+.container >* {
+  margin: 10px 0px;
+}
+
+.select {
+  color: #fff;
+  padding: 5px;
+  background-color:rgba(128, 155, 155, 0.5);
+}
+select option {
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+}
+
+/*  canvas */
+#canvas-wrap { 
+  position: relative; 
+} 
+
+.fancy-border {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  border: 25px solid #23B88846;
+  border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E") 25;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn{
+  text-align: center;
+  padding: 5px 10px;
+  height: 30px;
+  border: 1px solid #fff;
+  background-image: linear-gradient(#405661 45%, #1d2a31 55%);
+  -webkit-box-shadow: 0 0 5px #fff;
+  box-shadow: 0 0 5px #fff;
+  color: #fff;
+  cursor: pointer;
+}
+.btn:hover {
+  -webkit-box-shadow: 0 0 10px #fff;
+        box-shadow: 0 0 10px #fff;
+  transition: .3s;
+}
+.btn.world{
+  padding: none;
+  align-self: center;
+  text-shadow: -1px 0 black,
+  0 1px black,
+  1px 0 black,
+  0 -1px black;
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: url(../img/world-icon.png) no-repeat center center / cover;
+}
+
+.world:focus{
+  outline: none;
 }
