--- a/projects/Covid-19/css/style.css
+++ b/projects/Covid-19/css/style.css
@@ -12,11 +12,10 @@ body {
   flex-direction: column;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 130vh;
   background: url(https://unsplash.it/1800/800?image=893);
   background-size: cover;
   background-position: 50%;
-  overflow: hidden;
   font-family: "Cutive Mono", monospace;
 }
 
@@ -71,6 +70,7 @@ select option {
 /*  canvas */
 #canvas-wrap { 
   position: relative; 
+  background-color: rgba(255, 255, 255, 0.1);
 } 
 
 .fancy-border {
@@ -209,3 +209,9 @@ ul {
   0 -1px rgb(255, 168, 5);
 }
 
+/* country details */
+.country-details {
+  background-color: #fff;
+  width: 100%;
+  height: 10vh;
+}
