--- a/projects/Covid-19/css/style.css
+++ b/projects/Covid-19/css/style.css
@@ -211,7 +211,28 @@ ul {
 
 /* country details */
 .country-details {
-  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 10vh;
+}
+
+.detail {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  border-radius: 5px;
+  background-color: rgba(128, 155, 155, 0.5);
+}
+
+.detail p {
+  background-color: rgba(28, 34, 34, 0.5);
+  font-weight: 700;
+}
+
+.number-container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
